# quant-system

./: .gitignore  README.md  index.html  pyproject.toml
deploy/: backup_records.sh  com.qtrade.ibgateway.plist  com.qtrade.paper.plist  paper_all.sh
docs/: HANDOFF.md  decision-playbook.md  morning-report-2026-07-11.md  ops-runbook.md  product-report.md  qmt-deployment.md  research-backlog.md
qtrade/: cli.py  presets.py  research_factors.py  timeconv.py
research/: ashare_daily_xs.py  ashare_etf_rotation.py  basis_carry.py  cb_double_low.py  cb_downward_revision.py  cb_low_premium.py  cn_carry.py  cn_futures_trend.py  cn_quant_public_notes.md  cn_xs_momentum.py  collect_cb_events.py  crypto_iv_sizing.py  daily_xs.py  ensemble_test.py  etf_defensive_real.py  etf_trend_exec.py  factor_prescreen.py  factor_scan.py  fee_verdicts.py  fetch_cb_data.py  fetch_cn_contracts.py  fetch_csi500_daily.py  fetch_dvol.py  fetch_e64_universe.py  fetch_fundamentals_akshare.py  fetch_hs300_daily.py  fetch_hs300_pit.py  fetch_pit_akshare.py  fetch_tushare_pit.py  funding_bias.py  funding_impact.py  futures_ibkr.py  futures_trend.py  index_enhance.py  index_enhance_v2.py  index_trend.py  leg_attribution.py  limit_lock.py  log.md  meta_portfolio.py  (+21 more)
tests/: test_alerts.py  test_ashare_ml.py  test_broker.py  test_broker_flow.py  test_broker_guard.py  test_broker_recon.py  test_cb_book.py  test_cb_events.py  test_cn_exec.py  test_cn_futures.py  test_engine.py  test_factor_zoo.py  test_futures_ib.py  test_gateway_probe.py  test_llm_agents.py  test_no_lookahead.py  test_paper_nan_guard.py  (+10 more)
(+500 files in other folders)
