[project]
name = "qtrade"
version = "0.1.0"
description = "Multi-market quant research & backtesting system (crypto / A-share / US)"
requires-python = ">=3.12"
dependencies = [
    "ccxt>=4.3",
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=16.0",
    "duckdb>=1.0",
    "matplotlib>=3.9",
    "tqdm>=4.66",
    "vectorbt>=0.26",
    "tabulate>=0.10.0",
    "baostock>=0.9.2",
    "yfinance>=1.5.1",
    "ib-async>=2.1.0",
    "akshare>=1.18.64",
    "tushare>=1.4.29",
    "lightgbm>=4.6.0",
    "bottleneck>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "jupyterlab>=4.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["qtrade"]
